--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h2{
     font-size: 35px;
 }
 
-.card{
+.container{
     background-color:rgb(82, 82, 82) ;
     margin: 20px;
     border-radius: 10px;
@@ -39,7 +39,7 @@ h2{
 
 }
 
-.card h3{
+.container h3{
 color: white;
 padding: 5px;
 font-size: 25px;
@@ -47,27 +47,128 @@ background-color: rgb(90, 89, 89);
 margin-bottom: 10px;
 border-radius: 10px 10px 0px 0px;
 }
-.card button{
+.container button{
     padding: 10px;
     background-color:rgb(98, 98, 98) ;
     color: white;
     border-radius: 10px;
     font-size: 18px;
     text-decoration: none;
+    margin-bottom: 10px;
 }
 
-.card button:hover {
+.container button:hover {
     cursor: pointer;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
-
-.card img{
-    padding: 10px;
-    border-radius: 12px;
-    width: 600px;
 }
 
 #img1pv{
     display: none;
 }
 
+#img3apv{
+    display: none;
+}
+
+#img3bpv{
+    display: none;
+}
+
+#img3cpv{
+    display: none;
+}
+
+#img3dpv{
+    display: none;
+}
+
+#img3epv{
+    display: none;
+}
+
+#img4apv{
+    display: none;
+}
+
+#img4bpv{
+    display: none;
+}
+
+#img5apv{
+    display: none;
+}
+
+#img5bpv{
+    display: none;
+}
+
+#img5cpv{
+    display: none;
+}
+
+#img6pv{
+    display: none;
+}
+
+#img7pv{
+    display: none;
+}
+
+
+  .imgEdit{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+    
+}
+
+.imgEdit img{
+  border: 4px solid black;
+  margin: 5px;
+  transition: .2s linear;
+}
+
+.imgEdit img:hover{
+    border: 4px solid black;
+    margin: 5px;
+    box-shadow: 0px 10px 10px black;
+    transform: scale(1.01);
+    cursor: pointer;
+  }
+
+  #oversee .img-popup{
+    position: fixed;
+    top: 0; left: 0;
+    background: rgba(0,0,0,.9);
+    height: 100%;
+    width: 100%;
+    z-index: 100;
+    display: none;
+  }
+
+  #oversee .img-popup span{
+    position: absolute;
+    top: 0; right: 10px;
+    font-size: 60px;
+    font-weight: bolder;
+    color: white;
+    cursor: pointer;
+    z-index: 100;
+  }
+
+  #oversee .img-popup img{
+    position: absolute;
+    top: 50%; left: 50%;
+    transform: translate(-50%, -50%);
+    border: 5px solid black;
+    width: 850px;
+    object-fit: cover;
+  }
+
+@media (max-width:768px){
+    #oversee .img-popup img{
+        width: 95%;
+    }
+}
